# line-oa-cli

./: .gitignore  README.md  pyproject.toml
scripts/: smoke.sh  test-pure.sh
src/line_oa/: cli.py  client.py  config.py  errors.py
src/line_oa/_skill/: SKILL.md
src/line_oa/commands/: _curate.py  _io.py  account.py  auth.py  content.py  export.py  install_skill.py  list_chats.py  notes.py  profile.py  read.py  search.py  send.py  tag.py
tests/: test_pure.py
