[project]
name = "line-oa"
version = "0.1.0"
description = "LINE OA customer-service CLI for Claude"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.scripts]
line-oa = "line_oa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/line_oa"]
